Improvements for md und ipynb output

--- a/_templates/template_python.ipynb
+++ b/_templates/template_python.ipynb
@@ -95,14 +95,22 @@
    "source": [
     "# helper function for reading datasets with proper separator\n",
     "def get_dataset(url):\n",
-    "    if url[-3:] != \"csv\":\n",
-    "        print(\"The data set URL has no proper 'csv' extension. Reading the dataset might not have worked as expected.\\nPlease check the dataset link and adjust pandas' read_csv() parameters accordingly.\")\n",
-    "    data = pd.read_csv(url, sep=\",\", on_bad_lines='warn', encoding_errors='ignore', low_memory=False)\n",
-    "    # if dataframe only has one column or less the data is not comma separated, use \";\" instead\n",
-    "    if data.shape[1] <= 1:\n",
-    "        data = pd.read_csv(url, sep=';', on_bad_lines='warn', encoding_errors='ignore', low_memory=False)\n",
+    "    \"\"\"\n",
+    "    Return pandas df if url is parquet or csv file. Return None if not.\n",
+    "    \"\"\"\n",
+    "    extension = url.rsplit(\".\",1)[-1]\n",
+    "    if extension == 'parquet':\n",
+    "        data = pd.read_parquet(url)\n",
+    "    elif extension == 'csv':\n",
+    "        data = pd.read_csv(url, sep=\",\", on_bad_lines='warn', encoding_errors='ignore', low_memory=False)\n",
+    "        # if dataframe only has one column or less the data is not comma separated, use \";\" instead\n",
     "        if data.shape[1] <= 1:\n",
-    "            print(\"The data wasn't imported properly. Very likely the correct separator couldn't be found.\\nPlease check the dataset manually and adjust the code.\")\n",
+    "            data = pd.read_csv(url, sep=';', on_bad_lines='warn', encoding_errors='ignore', low_memory=False)\n",
+    "            if data.shape[1] <= 1:\n",
+    "                print(\"The data wasn't imported properly. Very likely the correct separator couldn't be found.\\nPlease check the dataset manually and adjust the code.\")\n",
+    "    else:\n",
+    "        print(\"Cannot load data! Please provide an url with csv or parquet extension.\")\n",
+    "        data = None\n",
     "    return data"
    ]
   },
