--- a/_templates/template_rmarkdown.Rmd
+++ b/_templates/template_rmarkdown.Rmd
@@ -10,8 +10,7 @@ output: html_document
 
 {{ SSZ_COMMENTS }}
 
-{{ DATASHOP_LINK_PROVIDER }}<br>
-{{ DATASHOP_LINK_ORGANIZATION }}
+{{ DATASHOP_LINK_PROVIDER }}
 
 Auto generated R starter code for data set {{ DATASET_IDENTIFIER }}.
 
@@ -29,9 +28,6 @@ library(skimr)
 ```
 
 # Load data
-
--   The dataset has {{ DISTRIBUTION_COUNT }} distribution(s) in CSV format.
--   All available CSV distributions are listed below and can be read into a tibble.
 
 ```{r}
 
