correct condition, prettify rmd files

--- a/_templates/template_rmarkdown.Rmd
+++ b/_templates/template_rmarkdown.Rmd
@@ -21,19 +21,17 @@ Auto generated R starter code for data set {{ DATASET_IDENTIFIER }}.
 # Load packages
 
 ```{r}
-
-library(tidyverse)
 library(skimr)
-
+library(tidyverse)
 ```
 
 # Load data
 
 ```{r}
 url <- "{{ FILE_URL }}"
-if str_detect(url, ".csv") {
+if (str_detect(url, ".csv")) {
     df <- readr::read_csv(url)
-} else if str_detect(url, ".parquet") {
+} else if (str_detect(url, ".parquet")) {
     df <- arrow::read_parquet(url)
 } else {
     print("File format not recognised!")
@@ -41,15 +39,17 @@ if str_detect(url, ".csv") {
 ```
 # Analyze data
 
+look at the data
 ```{r}
-
-glimpse(df)
-str(df)
-skim(df)
-
 head(df)
-tail(df)
+```
 
+```{r}
+glimpse(df)
+```
+
+```{r}
+skim(df)
 ```
 
 # Continue your code here...
