--- a/_templates/template_rmarkdown_geo.Rmd
+++ b/_templates/template_rmarkdown_geo.Rmd
@@ -28,7 +28,13 @@ library(tidyverse)
 library(xml2)
 ```
 
-# Load data
+# Load the data
+
+data link
+```{r}
+url <- "{{ FILE_URL }}"
+```
+
 
 Helper function to create the url based on the geoportal, as the files are not directly available via fixed link like csvs.
 ```{r}
@@ -65,26 +71,11 @@ get_wfs_layers <- function(url) {
 }
 
 # Fetch available layers
-layers <- get_wfs_layers("{{ FILE_URL }}")
+layers <- get_wfs_layers(url)
 
 # Set first layer as default
 typename <- xml_text(layers[[1]])
 cat("Chosen typename:", typename, "\n")
-```
-
-if the approach above does not work, try using [ows4r](https://eblondel.github.io/ows4R/); however, this needs to be installed first
-```{r eval=FALSE}
-# install.packages("ows4R")
-library(ows4R)
-
-# WFS-Client erstellen
-wfs_client <- WFSClient$new(url_geoportal, "1.1.0")
-
-# Verfügbare Feature-Typen anzeigen
-wfs_client$getFeatureTypes(pretty = TRUE)
-
-typenames <- wfs_client$getFeatureTypes(pretty = TRUE) |> 
-  dplyr::pull(name)
 ```
 
 read the data
@@ -104,10 +95,28 @@ read_geodata <- function(url, typename) {
   st_read(request$url)
 }
 
-df <- read_geodata("{{ FILE_URL }}", typename)
+df <- read_geodata(url, typename)
 ```
 
-# Analyze data
+if the approach above does not work, try using [ows4r](https://eblondel.github.io/ows4R/); however, this needs to be installed first
+```{r eval=FALSE}
+# install.packages("ows4R")
+library(ows4R)
+
+# WFS-Client erstellen
+url_geoportal <- get_geoportal_url(url)
+wfs_client <- WFSClient$new(url_geoportal, "1.1.0")
+
+# Verfügbare Feature-Typen anzeigen
+wfs_client$getFeatureTypes(pretty = TRUE)
+
+typenames <- wfs_client$getFeatureTypes(pretty = TRUE) |> 
+  dplyr::pull(name)
+
+df <- read_geodata(url, typenames[[1]])
+```
+
+# Analyze the data
 
 look at the data
 ```{r}
