remove csv disctribution count and commented code

--- a/_templates/template_python.ipynb
+++ b/_templates/template_python.ipynb
@@ -119,10 +119,7 @@
    "id": "02ce518f",
    "metadata": {},
    "source": [
-    "## Load data\n",
-    "\n",
-    "- The dataset has **`{{ DISTRIBUTION_COUNT }}` distribution(s)** in CSV format.\n",
-    "- All available CSV distributions are listed below and can be read into a pandas dataframe."
+    "## Load the data"
    ]
   },
   {
@@ -140,7 +137,7 @@
    "id": "4ce1f78f",
    "metadata": {},
    "source": [
-    "## Analyze data"
+    "## Analyze the data"
    ]
   },
   {
