--- a/_templates/template_python_geo.ipynb
+++ b/_templates/template_python_geo.ipynb
@@ -154,10 +154,7 @@
    "id": "02ce518f",
    "metadata": {},
    "source": [
-    "## Load data\n",
-    "\n",
-    "- The dataset has **`{{ DISTRIBUTION_COUNT }}` distribution(s)** in CSV format.\n",
-    "- All available CSV distributions are listed below and can be read into a pandas dataframe."
+    "## Load the data"
    ]
   },
   {
@@ -175,7 +172,7 @@
    "id": "4ce1f78f",
    "metadata": {},
    "source": [
-    "## Analyze data"
+    "## Analyze the data"
    ]
   },
   {
