--- a/_templates/template_python.ipynb
+++ b/_templates/template_python.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{{ DISTRIBUTION }}"
+    "df = get_dataset('{{ FILE_URL }}')"
    ]
   },
   {
