--- a/_templates/template_python_geo.ipynb
+++ b/_templates/template_python_geo.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{{ DISTRIBUTION }}"
+    "gdf = get_dataset('{{ FILE_URL }}')"
    ]
   },
   {
