--- a/_templates/template_python_geo.ipynb
+++ b/_templates/template_python_geo.ipynb
@@ -37,8 +37,7 @@
    "source": [
     "## Data set links\n",
     "\n",
-    "{{ DATASHOP_LINK_PROVIDER }}<br>\n",
-    "{{ DATASHOP_LINK_ORGANIZATION }}"
+    "{{ DATASHOP_LINK_PROVIDER }}<br>\n"
    ]
   },
   {
